--- a/motor-models/index.html
+++ b/motor-models/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1>Links for motor-models</h1>
+    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/motor-models-0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8">motor_models-0.0.1</a>
+    <br>
+    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/motor_models-0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8">motor_models-0.0.1</a>
+    <br>
+    
     <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-b0.0.1</a>
     <br>
     <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-0.0.1</a>
