--- a/motor-models/index.html
+++ b/motor-models/index.html
@@ -6,47 +6,6 @@
 </head>
 <body>
     <h1>Links for motor-models</h1>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/motor-models-0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8">motor_models-0.0.1</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/motor_models-0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8">motor_models-0.0.1</a>
-    <br>
-    
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-b0.0.1</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-0.0.1</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-b0.0.1</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-0.0.1</a>
-    <br>
-
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.zip#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-b0.0.1</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.zip#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-0.0.1</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.zip#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-b0.0.1</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.zip#sha256=123" data-requires-python="&gt;=3.8.0">motor_models-0.0.1</a>
-    <br>
-
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor-models-b0.0.1.tar.gz</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor-models-0.0.1.tar.gz</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor-models-b0.0.1.tar.gz</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.tar.gz#sha256=123" data-requires-python="&gt;=3.8.0">motor-models-0.0.1.tar.gz</a>
-    <br>
-
-
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.zip#sha256=123" data-requires-python="&gt;=3.8.0">motor-models-b0.0.1.zip</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.zip#sha256=123" data-requires-python="&gt;=3.8.0">motor-models-0.0.1.zip</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/b0.0.1.zip#sha256=123" data-requires-python="&gt;=3.8.0">motor-models-b0.0.1.zip</a>
-    <br>
-    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/0.0.1.zip#sha256=123" data-requires-python="&gt;=3.8.0">motor-models-0.0.1.zip</a>
-    <br>
-
+    <a href="https://github.com/Appuxif/motor_models/archive/refs/tags/motor-models-0.0.1.tar.gz#sha256=10e9a4eaadce038081da39cfe608371f1624f2461a1039bae721f65547f91eb6" data-requires-python="&gt;=3.8">motor_models-0.0.1</a>
 </body>
 </html>
